# poet

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  CNAME  LICENSE  README.md  benchmark.html  cpu_info.html  dispatch.html  dispatch_set.html  dot_product.html  dynamic_for.html  godbolt_links.json  index.html  perf.data  poet.hpp  polynomial.html  static_for.html
.github/workflows/: .gitkeep  benchmarks.yml  ci.yml  codspeed.yml  godbolt-links.yml  goldbot.yml
benchmark-results/: asm_analysis.md  bench_comparison.csv  bench_comparison.md
benchmarks/: CMakeLists.txt  compiler_comparison_bench.cpp  dispatch_bench.cpp  dispatch_optimization_bench.cpp  dynamic_for_bench.cpp  dynamic_for_dispatch_bench.cpp  dynamic_for_emission_bench.cpp  dynamic_for_forms_bench.cpp  dynamic_for_index_only_bench.cpp  main.cpp  poet_dynamic_for_microbench.cpp  real_switch_gen.hpp  static_dispatch_bench.cpp  static_for_bench.cpp  static_for_bench_blocksize.cpp  static_for_bench_dependent.cpp  static_for_bench_main.cpp  static_for_bench_simple.cpp  static_for_bench_support.hpp  static_for_bench_unroll.cpp  switch_complete_impl.cpp  switch_vs_fptr_bench.cpp
cmake/: GenerateVersion.cmake  PoetDocs.cmake  PoetSanitizers.cmake  PoetStaticAnalysis.cmake  PoetWarnings.cmake  dev_helpers.cmake  poet-config.cmake  poet-config.cmake.in
devel/: CMakeLists.txt  gemm.cpp
docs/: Doxyfile.in  conf.py  index.rst  install.rst
docs/api/: class_view_hierarchy.rst.include  file_view_hierarchy.rst.include  unabridged_api.rst.include
docs/guides/: benchmarks.rst  dispatch.rst  dynamic_for.rst  static_dispatch.rst  static_for.rst
examples/: CMakeLists.txt  README.md  benchmark.cpp  cpu_info.cpp  dispatch.cpp  dispatch_set.cpp  dot_product.cpp  dynamic_for.cpp  polynomial.cpp  static_for.cpp
include/poet/: poet.hpp  version.hpp  version.hpp.in
include/poet/core/: cpu_info.hpp  dispatch.hpp  dynamic_for.hpp  for_utils.hpp  macros.hpp  mdspan_utils.hpp  register_info.hpp  static_dispatch.hpp  static_for.hpp  undef_macros.hpp
include/poet/detail/: README.md
scripts/: analyze_bench.py  bench_all.sh  extract_asm.py  generate_charts.py  parse_bench.py
tests/: CMakeLists.txt  cache_line_info_tests.cpp  cpu_info_tests.cpp  dispatch_tests.cpp  dynamic_for_advanced_tests.cpp  dynamic_for_core_basic_tests.cpp  dynamic_for_core_step_tests.cpp  dynamic_for_edge_stress_tests.cpp  dynamic_for_heavy_unroll_tests.cpp  dynamic_for_ranges_tests.cpp  dynamic_for_test_support.hpp  dynamic_for_tests.cpp  header_analysis.cpp  macros_tests.cpp  poet_detected_isa.hpp.in  poet_header_tests.cpp  register_info_tests.cpp  static_dispatch_advanced_tests.cpp  static_dispatch_basic_tests.cpp  static_dispatch_heavy_array1d_tests.cpp  static_dispatch_heavy_arraynd_tests.cpp  static_dispatch_heavy_return_tests.cpp  static_dispatch_heavy_tests.cpp  static_dispatch_test_support.hpp  static_dispatch_tests.cpp  static_dispatch_throw_tests.cpp  static_dispatch_tuple_tests.cpp  static_for_constexpr_tests.cpp  static_for_tests.cpp  test_pch.hpp
tools/: amalgamate.py  dyn_test_ira_no_share_spill  dyn_test_ira_priority  dyn_test_ira_region_mixed  dynamic_for_asm_test  dynamic_for_asm_test.cpp  dynamic_for_asm_test.s  dynamic_for_asm_test_post.s  dynamic_for_flatten.s  dynamic_for_flatten_rename.s  dynamic_for_test_no_unroll_rename  make_godbolt_links.py
